changed address oof where to scrape from, changed front-end logic

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 <h1 id="word"></h1>
 
-<input type="button" onclick="decision('De')" value="DE">
-<input type="button" onclick="decision('Het')" value="HET">
+<input type="button" onclick="decision('de')" value="DE">
+<input type="button" onclick="decision('het')" value="HET">
 <script src="script/script.js"></script>
 </body>
 </html>
