--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
     <title>Wordplay</title>
 </head>
 <body>
+
+<!--<div class="loading" id="loader"></div>-->
+<div class="loader" id="loader">
+    <div class="spin"></div>
+</div>
+
 <h1 id="word"></h1>
 
 <input type="button" onclick="decision('de')" value="DE">
 <input type="button" onclick="decision('het')" value="HET">
 <script src="script/script.js"></script>
+
 </body>
 </html>
