--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 <div class="loader" id="loader">
     <div class="spin"></div>
 </div>
+<main>
+    <h1 id="word"></h1>
+    <div class="buttonContainer">
+        <input type="button" onclick="decision('de')" value="DE">
+        <input type="button" onclick="decision('het')" value="HET">
+    </div>
 
-<h1 id="word"></h1>
-
-<input type="button" onclick="decision('de')" value="DE">
-<input type="button" onclick="decision('het')" value="HET">
+</main>
 <script src="script/script.js"></script>
 
 </body>
